--- a/sources/scss/style.scss
+++ b/sources/scss/style.scss
@@ -258,6 +258,11 @@ footer#copyright {
     }
   }
 
+  ul.pagination{
+    float: none;
+    justify-content: center;
+  }
+
   section#introduction {
     margin-top: -4rem;
 
