Fix nav padding

--- a/sources/scss/style.scss
+++ b/sources/scss/style.scss
@@ -523,6 +523,10 @@ footer#copyright {
       padding: 0 !important;
     }
 
+    nav.navbar{
+      padding: .5em 0;
+    }
+
     ul.navbar-nav {
       padding: 0.8em 0 !important;
 
